<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#091022">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/po_settings_button"
        android:textColor="#FFFFFF"
        android:background="@drawable/submit_button"
        android:id="@+id/buttonPulseOximeterPrefs"
        android:layout_weight="0.02"
        android:onClick="onClick"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/buttonHeartMonitorPrefs"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hm_settings_button"
        android:textColor="#FFFFFF"
        android:background="@drawable/submit_button"
        android:id="@+id/buttonHeartMonitorPrefs"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02"
        android:onClick="onClick"
        android:layout_marginTop="82dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/device_settings_title"
        android:textSize="40sp"
        android:id="@+id/textView"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textStyle="bold" />

</RelativeLayout>
