<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#091022"
    android:layout_height="match_parent">
    <include layout="@layout/toolbar1" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_marginTop="5dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Anemia"
                android:textColor="#FFFFFF"
                android:textStyle="bold"

                android:id="@+id/anemia"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="#FFFFFF"
                android:id="@+id/male"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="#FFFFFF"
                android:id="@+id/female"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_gravity="top|center|right"
                android:id="@+id/anemiaa"/>
            </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Severe Renal Disease"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:id="@+id/severe"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:paddingLeft="50dp"
                    android:layout_gravity="top|center|right"
                    android:id="@+id/severerenaldisease"/>
</LinearLayout>
                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
            >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"

                    android:text="@string/gfr"
                    android:id="@+id/gfr"/>

            </LinearLayout>



            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Age ≥ 75 years"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:id="@+id/age"/>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_gravity="top|center|right"
                android:id="@+id/ageyears"/>
            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Any Prior Hemorrhage Diagnosis"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:id="@+id/anypriorhemorrhage"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:text="Ex: GI bleed, intracranial hemorrhage"
                    android:id="@+id/gtbleed"/>
            </LinearLayout>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_gravity="top|center|right"
                android:id="@+id/anyprior"/>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hypertension History"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:id="@+id/hypertension"/>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_gravity="top|center|right"
                android:id="@+id/Hypertensionhistory"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:gravity="bottom">


            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="Submit"
                android:id="@+id/Submit"
                android:layout_marginTop="30dp"
                android:textColor="#FFFFFF"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/submit_button"/>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
